--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# requirements.txt
 streamlit
 pandas
 numpy
@@ -11,5 +10,5 @@ wordcloud
 torch
 transformers
 google-generativeai
-gensim
+gensim<4.3.2
 scikit-learn
